fix filters list on portfolio page on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,7 @@
 }
 
 .filters__list {
-  display: flex;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -368,12 +368,17 @@
 @media screen and (min-width: 768px) {
   .filters__list {
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .filters__list {
     flex-wrap: wrap;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
