--- a/sass/base/_filters_list.scss
+++ b/sass/base/_filters_list.scss
@@ -1,14 +1,19 @@
 .filters__list {
-  display: flex;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 
   @media screen and (min-width: 768px) {
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   @media screen and (min-width: 1200px) {
     flex-wrap: wrap;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
